Fix code style issues
Source: SonarLint :)